--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
   <title>Frontend Mentor | Easybank landing page</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -13,7 +13,7 @@
   <header class="header">
     <nav class="flex flex-jc-sb flex-ai-c">
       <a href="/" class="header__logo">
-        <img src="../images/logo.svg" alt="Easybank">
+        <img src="/images/logo.svg" alt="Easybank">
       </a>
 
       <a href="#" class="header__menu hide-for-desktop">
